# openrelik-worker-grep

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
src/: app.py  tasks.py
