[tool.poetry]
name = "openrelik-worker-template"
version = "0.1.0"
description = "Grep for patterns in files"
authors = ["tomchop"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
