[project]
name = "openrelik-worker-template"
version = "0.1.0"
description = "Grep for patterns in files"
authors = [{ name = "tomchop" }]
requires-python = ">=3.11,<4"
readme = "README.md"

dependencies = [
    "celery[redis]>=5.4.0,<6",
    "debugpy>=1.8.20",
    "openrelik-common>=0.7.6",
    "openrelik-worker-common>=0.17.1",
    "structlog>=25.5.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
